[package]
name = "srs-client"
version = "0.1.0"
edition = "2021"

[dependencies]
derive_more = "0.99"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
url = "2.5"

[dev-dependencies]
actix-web = { version = "4.5" }
tokio = { version = "1.36", features = ["full"] }
