[package]
name = "ephyr-restreamer"
version = "0.5.0"
edition = "2018"
authors = ["ALLATRA IT <it@allatra.org>"]
publish = false
default-run = "ephyr-restreamer"

[dependencies]
actix-service = "2.0.2"
actix-web = "4.1"
actix-web-httpauth = "0.6"
actix-web-static-files = "4.0"
static-files = "0.2.3"
anyhow = "1.0"
argon2 = { version = "0.8", package = "rust-argon2", default-features = false }
askama = { version = "0.10", default-features = false }
backoff = { version = "0.3", features = ["tokio"] }
byteorder = "1.4"
chrono = { version = "0.4", features = ["serde"] }
ephyr-log = { version = "0.1", path = "../../common/log" }
futures = "0.3"
futures-signals = "0.3"
graphql_client = "0.10.0"
hex = "0.4"
humantime = "2.1"
juniper = "0.15.9"
juniper_actix = { version = "0.4.0", features = ["subscriptions"] }
juniper_graphql_ws = "0.3.0"
once_cell = { version = "1.4", features = ["parking_lot"] }
public-ip = "0.1"
rand = "0.8"
regex = "1.4"
reqwest = { version = "0.10", features = ["json"], default-features = false }
send_wrapper = { version = "0.5", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_humantime = { version = "1.0", package = "humantime-serde" }
serde_json = "1.0"
smart-default = "0.6"
structopt = "0.3"
systemstat = "0.1.8"
url = { version = "2.1", features = ["serde"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
zeromq = "0.3.3"
tsclientlib = "0.2.0"
tsproto-packets = "0.1.0"
[dependencies.derive_more]
    version = "0.99.11"
    features = ["as_ref", "deref", "display", "error", "from"]
    default-features = false
[dependencies.tokio]
    version = "1.19.2"
    features = ["fs", "io-util", "process", "sync", "time"]
#[dependencies.juniper]
#    git="https://github.com/graphql-rust/juniper"
#    rev = "a32140cd46f17491d3f7a93b4a6c67732a29b0e8" # branch = "master"
#[dependencies.juniper_actix]
#    git="https://github.com/graphql-rust/juniper"
#    rev = "a32140cd46f17491d3f7a93b4a6c67732a29b0e8" # branch = "master"
#    features = ["subscriptions"]
#[dependencies.juniper_graphql_ws]
#    git="https://github.com/graphql-rust/juniper"
#    rev = "a32140cd46f17491d3f7a93b4a6c67732a29b0e8" # branch = "master"

[build-dependencies]
static-files = "0.2.3"
