[package]
name = "ephyr-api-google-drive"
version = "0.1.0"
edition = "2021"
authors = ["ALLATRA IT <it@allatra.org>"]
publish = false

[dependencies]
serde = { version = "1.0", features = ["derive"] }
mime = "0.3"
mime_serde_shim = "0.2"
url = { version = "2.1", features = ["serde"] }
[dependencies.derive_more]
    version = "0.99"
    features = ["as_ref", "deref", "display", "error", "from", "into"]
    default-features = false
[dependencies.reqwest]
    version = "0.11"
    features = ["default-tls", "json"]
    default-features = false


[dev-dependencies]
tokio = { version = "1.29", features = ["macros"] }
