[package]
name = "gstd_client"
version = "0.1.0"
authors = ["ALLATRA IT <it@allatra.org>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mime = "0.3"
mime_serde_shim = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_repr = "0.1"
url = { version = "2.1", features = ["serde"] }
[dependencies.derive_more]
version = "0.99"
features = ["display", "error", "from"]
default-features = false
[dependencies.reqwest]
version = "0.11"
features = ["default-tls", "json"]
default-features = false


[dev-dependencies]
tokio = { version = "1", features = ["macros"] }